# LegoGPT

./: .gitignore  .gitmodules  README.md  finetune.zsh  pyproject.toml
finetuning_config_files/: config.json  tokenizer_config.json
scripts/: finetune.zsh
src/legogpt/: infer.py  prepare_finetuning_dataset.py  render_lego.py
src/legogpt/data/: __init__.py  lego_library.json  lego_library.py  lego_structure.py
src/legogpt/models/: __init__.py  few_shot_examples.json  legogpt.py  llm.py
src/legogpt/stability_analysis/: __init__.py  stability_analysis.py  utils.py
src/texture/: README.md  blenderLego_toObj.py  pyproject.toml  uvs_to_voxels.py  voxel_to_brick.py  voxel_to_uvs.py
src/texture/examples/: chair.ldr  chair.txt  guitar.ldr  guitar.txt
src/texture/scripts/: generate_color.py  generate_color.sh  generate_texture.py  generate_texture.sh
tests/: test_infer.py  test_lego_structure.py
website/: index.html
