[project]
name = "legogpt"
version = "0.1.0"
description = "Official repository for LegoGPT"
readme = "README.md"
authors = [
    { name = "Ava Pun", email = "apun@andrew.cmu.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "gurobipy>=12.0.1",
    "peft>=0.15.0",
    "torch>=2.6.0",
    "transformers>=4.50.0",
    "trl>=0.16.0",
    "wandb>=0.19.8",
]

[project.scripts]
infer = "legogpt.infer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]
